# DibsCLI

./: LICENSE  README.md  pyproject.toml
src/dibs_cli/: dibscli.py  main.py
src/dibs_cli/dibscli_utils/: save_results.py  validate_inputs.py
